tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__ApiaristsCloth-AAAAAAAAAAAAAAAAAAAD5A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 996,
  "prerequisites": [
    995,
    1598
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you have collected 24 woven silk you can make a complete Apiarist's suit to be protected from bee stings and other bad bee effects. You can also use the suit parts to upgrade your EnderIO Dark Steel Armor to have the same effect.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Apiarist's Cloth",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    995,
    1598
  ],
  "rewards": [],
  "tasks": []
}
