tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__BeesBuzzingBeyon-AAAAAAAAAAAAAAAAAAAF7A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1516,
  "prerequisites": [
    1513
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If even the soul frame takes too long for your taste, the oblivion frame will destroy a bee in a single bee tick (27s). Be careful using more than one, there are rumors it might harm your princesses...\n\n[note]You can find them in Stronghold libraries or make them from Dragon Eggs. You can also use a Thaumic Restorer to fix it, and most frames too.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Bees Buzzing Beyond the Dark",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1513
  ],
  "rewards": [],
  "tasks": []
}
