tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__BusyBeesBuzzingB-AAAAAAAAAAAAAAAAAAAILA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2092,
  "prerequisites": [
    1123
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These upgrades can significantly increase your production rate by keeping your bees from stopping production due to the environment.\n\nRain Shield - Can work through the rain\nLighting - Can work day and night\nAlveary Heater - Increases temperature a flat 20% each (needs power)\nAlveary Fan - Decreases temperature a flat 20% each (needs power)\nAlveary Hygroregulator[sic] - Has two modes, water and lava\nLava - Temp+10%, Humidity-20%\nWater - Temp-10%, Humidity+20%\n\nUnfortunately, there's no way to make them like caves with a block.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Busy Bees Buzzing Boldly",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1123
  ],
  "rewards": [],
  "tasks": []
}
