tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__DeathtoBees-AAAAAAAAAAAAAAAAAAAF6Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1513,
  "prerequisites": [
    1113
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These frames will let you kill your bees faster. It's to breed the next generation sooner, right? Not because you don't like them?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Death to Bees!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1113
  ],
  "rewards": [],
  "tasks": []
}
